Refactor: Enterprise security, N+1 optimizations, Code Cleanup, and Java 21 Modernization