@@ -20,7 +20,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -125,7 +124,7 @@ public class BrandServiceImpl implements BrandService {
                         (b.getDescription() != null && b.getDescription().toLowerCase().contains(keyword.toLowerCase())))
                 .map(this::mapToResponse)
                 .sorted(Comparator.comparing(BrandResponse::createdAt).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BrandResponse mapToResponse(Brand brand) {
