@@ -18,7 +18,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,7 +42,7 @@ public class CatalogServiceImpl implements CatalogService {
                 .filter(c -> c != null)
                 .sorted((a, b) -> b.id().compareTo(a.id())) 
                 .limit(maxLimit)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
